<resources>
    <string name="app_name">Dictionary</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="listIsEmpty">There is no word</string>
    <string name="english">English</string>
    <string name="persian">فارسی</string>
    <string name="add">add</string>
    <string name="emtyEdt">This field should not be empty</string>
    <string name="emtyEdtPer">این فیلد نباید خالی باشد.</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="search">Search</string>
</resources>