<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".controller.fragment.AddDialogFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/english"
        android:textSize="28sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_add_english"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="28sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:fontFamily="@font/penguin_attack"
        android:text="@string/persian"
        android:textSize="28sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_add_persian"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:textSize="28sp" />

    <Button
        android:id="@+id/btn_add_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/add"
        android:textColor="#FFFFFF" />


</LinearLayout>